scripts/nullaway/wpi/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8.txt
../wpi/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ResultPanel.java:85: error: [NullAway] dereferenced expression attributes is @Nullable
        _strengthValue.setText(String.valueOf(attributes[0]));
                                                        ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ChoicePanel.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
